--- a/static/base.css
+++ b/static/base.css
@@ -47,9 +47,22 @@ footer{text-align:center;bottom:0}
 }
 
 ::-webkit-scrollbar{width:10px}
-::-webkit-scrollbar-track{background:transparent}
+::-webkit-scrollbar-track{background:#999}
 ::-webkit-scrollbar-thumb{background:#aaa;border-radius: 5px;}
 ::-webkit-scrollbar-thumb:hover{background:#777;border-radius: 5px;}
+
+#mobilelogo {
+  display:none;
+}
+
+@media (max-width:1024px) {
+  #mobilelogo {
+    display: inline-flex;
+  }
+  #desktoplogo {
+    display: none;
+  }
+}
 
 input:-webkit-autofill,
 input:-webkit-autofill:hover, 
