--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,6 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link href="{{ url_for('static', filename='tailwind.css') }}" rel="stylesheet" type="text/css">
-		<!-- <link href="{{ url_for('static', filename='tailwind.css') }}" rel="stylesheet" type="text/css"> -->
 		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='datatables.scss') }}">
 		<script type="text/javascript" charset="utf8" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 		<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.js"></script>
@@ -15,32 +14,53 @@
 		<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/plug-ins/1.10.21/sorting/datetime-moment.js"></script>
 		<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/datetime/1.0.3/js/dataTables.dateTime.min.js"></script>
 		<link rel='stylesheet' type='text/css' href='https://cdn.jsdelivr.net/npm/twemoji-awesome@1.0.6/dist/twemoji-awesome.min.css'></link>
-		<!-- <script src='https://cdnjs.cloudflare.com/ajax/libs/progressbar.js/0.6.1/progressbar.js'></script> -->
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css2?family=Orienta&display=swap" rel="stylesheet">
 		<script src="https://kit.fontawesome.com/a6310495d7.js" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
-		<div class="grid grid-cols-3 sticky top-0 bg-gray-100 mb-8 z-40 w-full shadow place-content-center">
-			<a href='/'><img class='h-24 ml-4' src='https://raw.githubusercontent.com/gist/literaiiy/62febf3d1f9a035b469e06bdef8456bc/raw/223650b7551fd90e7747e687a2643cdb1cdebf9d/teeramouse.svg' alt="tiramisu Logo" height='6%' width='auto'>
-			</a>
-			<form class='p-1 bg-white px-0 text-gray-600 rounded-lg m-0 self-center relative mx-5 shadow' action="/" method="POST">
+		<!-- DESKTOP USERS -->
+		<div id='desktoplogo' class="grid grid-cols-4 sticky top-0 bg-gray-100 mb-8 z-40 w-full shadow items-center">
+			<a href='/'><img class='h-16 w-auto ml-4' src='https://raw.githubusercontent.com/gist/literaiiy/62febf3d1f9a035b469e06bdef8456bc/raw/223650b7551fd90e7747e687a2643cdb1cdebf9d/teeramouse.svg' alt="tiramisu Logo"></a>
+			<form class='col-span-2 p-1 bg-white px-0 text-gray-600 rounded-lg m-0 self-center relative mx-5 shadow' action="/" method="POST">
 				<input class='w-full py-3 outline-none h-full text-center' type="text" name="content" id="content" autofocus="autofocus" required='true' onfocus="this.select()" autocomplete="on" spellcheck="false" placeholder="Search username or UUID">
 				<button class="absolute right-3 w-8 top-0 self-center focus:outline-none h-full" type="submit">
 					<svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"width="24" height="24"viewBox="0 0 50 50"style=" fill:#9FA6B2;"><path d="M 21 3 C 11.621094 3 4 10.621094 4 20 C 4 29.378906 11.621094 37 21 37 C 24.710938 37 28.140625 35.804688 30.9375 33.78125 L 44.09375 46.90625 L 46.90625 44.09375 L 33.90625 31.0625 C 36.460938 28.085938 38 24.222656 38 20 C 38 10.621094 30.378906 3 21 3 Z M 21 5 C 29.296875 5 36 11.703125 36 20 C 36 28.296875 29.296875 35 21 35 C 12.703125 35 6 28.296875 6 20 C 6 11.703125 12.703125 5 21 5 Z"></path></svg>
 				</button>
 			</form>
 			<div class="flex flex-row-reverse">
-				<button class='my-5 mx-2 px-3 col-start-7 focus:outline-none bg-gray-200 rounded-xl hover:bg-gray-300'><i class="m-0 twa twa-2x twa-1f1fa-1f1f8"></i></button>
-				<button class="my-5 mx-2 px-3 focus:outline-none bg-gray-200 rounded-xl hover:bg-gray-300"><i class="twa twa-2x twa-2600"></i></button>
+				<button class='my-5 mx-2 p-3 col-start-7 focus:outline-none bg-gray-200 rounded-xl hover:bg-gray-300'>
+					<i class="m-0 twa twa-2x twa-1f1fa-1f1f8"></i>
+				</button>
 			</div>
+		</div>
+		<!-- MOBILE USERS -->
+		<div id='mobilelogo' class="flex flex-row flex-nowrap justify-between sticky top-0 bg-gray-100 mb-8 z-40 w-full shadow items-center">
+			<a class='flex-none' href="/"><img class='h-16 w-auto ml-4' src="https://raw.githubusercontent.com/gist/literaiiy/4abf7e5c3a61d91437788459eecc044c/raw/b51b7045ee1d35a2faf889228ef5c353777481e5/tiramis2.svg" alt="tiramisu logo but mobile"></a>
+			<form class='flex-shrink w-full p-1 bg-white px-0 text-gray-600 rounded-lg m-0 self-center relative mx-5 shadow' action="/" method="POST">
+				<input class='w-full py-3 outline-none h-full text-center' type="text" name="content" id="content" autofocus="autofocus" required='true' onfocus="this.select()" autocomplete="on" spellcheck="false" placeholder="Search username/UUID">
+				<button class="absolute right-3 w-8 top-0 self-center focus:outline-none h-full" type="submit">
+					<svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"width="24" height="24"viewBox="0 0 50 50"style=" fill:#9FA6B2;"><path d="M 21 3 C 11.621094 3 4 10.621094 4 20 C 4 29.378906 11.621094 37 21 37 C 24.710938 37 28.140625 35.804688 30.9375 33.78125 L 44.09375 46.90625 L 46.90625 44.09375 L 33.90625 31.0625 C 36.460938 28.085938 38 24.222656 38 20 C 38 10.621094 30.378906 3 21 3 Z M 21 5 C 29.296875 5 36 11.703125 36 20 C 36 28.296875 29.296875 35 21 35 C 12.703125 35 6 28.296875 6 20 C 6 11.703125 12.703125 5 21 5 Z"></path></svg>
+				</button>
+			</form>
+			<div class="flex flex-row-reverse">
+				<button class="my-5 ml-1 mr-5 p-2.5 col-start-7 focus:outline-none bg-gray-200 rounded-xl hover:bg-gray-300">
+					<i class="m-0 twa twa-2x twa-1f1fa-1f1f8"></i>
+				</button>
+			</div>
+
+			<!-- <div class='dropdown'>
+				<button class='my-5 mx-2 px-3 col-start-7 focus:outline-none bg-gray-200 rounded-xl hover:bg-gray-300'><i class="m-0 twa twa-2x twa-1f1fa-1f1f8"></i></button>
+			</div>
+			<div class="dropdown-content"><p>Hi</p></div> -->
+			<!-- <button class="my-5 mx-2 px-3 focus:outline-none bg-gray-200 rounded-xl hover:bg-gray-300"><i class="twa twa-2x twa-2600"></i></button> -->
 		</div>
 	</head>
 
 	{% block content %}
-		<main class='flex-grow grid grid-cols-10 gap-4 sm:mx-5'>
-			<div class='col-start-2 col-end-10 bg-gray-100 rounded-2xl text-4xl font-bold p-6 shadow text-center'>Welcome to tiramisu!</div>
-			<div class="col-start-2 col-end-6 bg-gray-100 rounded-2xl p-6 shadow divide-y divide-gray-300">
+		<main class='flex-grow grid sm:grid-cols-1 lg:grid-cols-10 gap-4 sm:mx-5'>
+			<div class='sm:col-span-1 sm:text-3xl lg:col-start-2 lg:col-end-10 bg-gray-100 rounded-2xl text-4xl font-bold p-6 shadow text-center'>Welcome to tiramisu!</div>
+			<div class="sm:col-span-1 lg:col-start-2 lg:col-end-6 bg-gray-100 rounded-2xl p-6 shadow divide-y divide-gray-300">
 				<div class="text-3xl font-semibold pb-5">Player Counts</div>
 				<div class='pt-5'>
 					{% if totalPlayers != -1 %}
@@ -97,7 +117,7 @@
 					{% endif %}
 				</div>
 			</div>
-			<div class="col-start-6 col-end-10 bg-gray-100 rounded-2xl p-6 shadow">
+			<div class="sm:col-span-1 lg:col-start-6 lg:col-end-10 bg-gray-100 rounded-2xl p-6 shadow">
 				<p>Hey. This is another stupid div that is also stupid. This is some more text lorem ipsum. I love SAT Practice; I will continue with it for the rest of my life. Just kidding. I should probably generate some Lorem Ipsum text instead of wasting my time, so here it goes. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vulputate arcu at orci bibendum, et ornare tortor suscipit. Donec quis bibendum arcu. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent sed libero est. Aliquam sollicitudin venenatis neque. Sed est elit, mattis sit amet venenatis eu, vestibulum eget ligula. Maecenas diam urna, pharetra at auctor vitae, pharetra vel est. Duis iaculis dolor semper, accumsan tortor a, hendrerit massa. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nullam maximus justo mauris, in dignissim magna eleifend in. Nam interdum arcu eu dolor lacinia, vitae imperdiet nunc laoreet. Suspendisse eget euismod nibh. Donec ut erat bibendum, varius sapien at, rhoncus felis. In diam lorem, vulputate quis placerat sit amet, luctus eget risus. Fusce quis ex justo.</p>
 				<p>Integer cursus pretium nisl nec rutrum. Sed scelerisque iaculis tincidunt. Phasellus id venenatis risus. Donec pellentesque est sit amet viverra tristique. Cras faucibus eget orci vitae tempor. Vivamus at diam sed ex aliquam luctus. Nam malesuada, enim sit amet rhoncus rhoncus, velit nibh egestas ligula, ac blandit eros magna sit amet risus. In ac lacus consequat, hendrerit nunc nec, mollis massa. Cras fermentum quis mauris eget accumsan. In consequat diam mauris, ac elementum lorem efficitur at. Cras vestibulum est turpis, id ullamcorper est porttitor eget.</p>
 			</div>
@@ -106,7 +126,7 @@
 	{% endblock %}
 
 	{% block footer %}
-	<footer class='w-full bg-gray-100 shadow-md mt-5 py-8'>
+	<footer class='w-full bg-gray-100 shadow-md mt-5 p-8'>
 		<p>tiramisu <b>v0.4.0.4δ "delta" (Testing Phase)</b> - April 2, 2021 · Flask <b>v1.1.2</b> · Python <b>v3.7.9</b><p>
 		<p>Copyright © 2021 <a class='no-underline text-gray-500' href='/p/floraphile'>literaiiy</a>. All rights reserved. <a class='no-underline text-gray-500' href="/privacy">Privacy Policy</a>. Powered by <a class='no-underline text-gray-500' href="https://heroku.com">Heroku</a>. Times in UTC.</p>
 	</footer>
