--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <body class='flex flex-col min-h-screen'>
 	<head>
@@ -6,6 +7,9 @@
 	{% endblock %}
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="description" content="tiramisu">
+		<meta name="keywords" content="tiramisu, hypixel, minecraft">
+		<meta name="author" content="literaiiy">
 		<link href="{{ url_for('static', filename='tailwind.css') }}" rel="stylesheet" type="text/css">
 		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='datatables.scss') }}">
 		<script type="text/javascript" charset="utf8" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
