--- a/templates/base.html
+++ b/templates/base.html
@@ -711,7 +711,7 @@
                             <p>
                                 <b>{{ swTimeLists[0][5] }}</b> in total <br>
                                 {% for mode in range(5) %}
-                                    {{ swTimeModeList[mode] }}: <b>{{ swTimeLists[0][mode] }}</b> (<b>{{swTimeLists[1][mode]}}</b>%)<br>
+                                    <b class="{{swTimeLists[2][mode]}}">{{ swTimeModeList[mode] }}</b>: <b>{{ swTimeLists[0][mode] }}</b> (<b>{{swTimeLists[1][mode]}}</b>%)<br>
                                 {% endfor %}
                             </p>
                             <p>
@@ -751,8 +751,12 @@
                         <span class="gray"><b>{{swSoulList['souls'] | those}}</b> souls</span> <br>
                         <b>{{swSoulList['souls_gathered'] | those}}</b> souls harvested <br>
                         <b>{{swSoulList['paid_souls'] | those}}</b> souls bought <br>
+                    </p>
+                    <p>
                         <b>{{swSoulList['souls_gathered_lab'] | those}}</b> (<b>{{swSoulList['labperc'][0]}}</b>%) souls from Lab <br>
                         <b>{{swSoulList['souls_nonlab'] | those}}</b> (<b>{{swSoulList['labperc'][1]}}</b>%) souls from non-Lab<br>
+                    </p>
+                    <p>
                         <span class="gold"><b>{{swSoulList['soul_well_legendaries'] | those}}</b> legendaries</span> <br>
                         <span class="blue"><b>{{swSoulList['soul_well_rares'] | those}}</b> rares</span> <br>
                         <span class="green"><b>{{swSoulList['soul_well_commons'] | those}}</b> commons</span> <br>
@@ -1070,14 +1074,14 @@
                 {% if bwOverallStats['kills_bedwars'] %}
                     <div>
                         <p>
-                            <b>Melee</b>: {{bwKillsList[0]['Melee'][0]| those}} (<b>{{bwKillsList[0]['Melee'][1]}}</b>%)<br>
-                            <b>Projectile</b>: {{bwKillsList[0]['Projectile'][0]| those}} (<b>{{bwKillsList[0]['Projectile'][1]}}</b>%)<br>
-                            <b>Void</b>: {{bwKillsList[0]['Void'][0]| those}} (<b>{{bwKillsList[0]['Void'][1]}}</b>%)<br>
-                            <b>Magic</b>: {{bwKillsList[0]['Magic'][0]| those}} (<b>{{bwKillsList[0]['Magic'][1]}}</b>%)<br>
-                            <b>Entity</b>: {{bwKillsList[0]['Entity'][0]| those}} (<b>{{bwKillsList[0]['Entity'][1]}}</b>%)<br>
-                            <b>Entity Explosion</b>: {{bwKillsList[0]['Entity explosion'][0]| those}} (<b>{{bwKillsList[0]['Entity explosion'][1]}}</b>%)<br>
-                            <b>Fire</b>: {{bwKillsList[0]['Fire'][0]| those}} (<b>{{bwKillsList[0]['Fire'][1]}}</b>%)<br>
-                            <b>Fall Damage</b>: {{bwKillsList[0]['Fall damage'][0]| those}} (<b>{{bwKillsList[0]['Fall damage'][1]}}</b>%)<br>
+                            <b class='dark_blue'>Melee</b>: {{bwKillsList[0]['Melee'][0]| those}} (<b>{{bwKillsList[0]['Melee'][1]}}</b>%)<br>
+                            <b class='gray'>Projectile</b>: {{bwKillsList[0]['Projectile'][0]| those}} (<b>{{bwKillsList[0]['Projectile'][1]}}</b>%)<br>
+                            <b class='dark_aqua'>Void</b>: {{bwKillsList[0]['Void'][0]| those}} (<b>{{bwKillsList[0]['Void'][1]}}</b>%)<br>
+                            <b class='dark_purple'>Magic</b>: {{bwKillsList[0]['Magic'][0]| those}} (<b>{{bwKillsList[0]['Magic'][1]}}</b>%)<br>
+                            <b class='gold'>Entity</b>: {{bwKillsList[0]['Entity'][0]| those}} (<b>{{bwKillsList[0]['Entity'][1]}}</b>%)<br>
+                            <b class='yellow'>Entity Explosion</b>: {{bwKillsList[0]['Entity explosion'][0]| those}} (<b>{{bwKillsList[0]['Entity explosion'][1]}}</b>%)<br>
+                            <b class='red'>Fire</b>: {{bwKillsList[0]['Fire'][0]| those}} (<b>{{bwKillsList[0]['Fire'][1]}}</b>%)<br>
+                            <b class='dark_red'>Fall Damage</b>: {{bwKillsList[0]['Fall damage'][0]| those}} (<b>{{bwKillsList[0]['Fall damage'][1]}}</b>%)<br>
                             {#% for name, num in bwKillsList[0].items() %}
                                 {% if 'Melee' not in name %}
                                     <b>{{name}}</b>: {{num[0]| those}} (<b>{{num[1]}}</b>%)<br>
@@ -1200,14 +1204,14 @@
                 {% if bwOverallStats['final_kills_bedwars'] %}
                     <div>
                         <p>
-                            <b>Melee</b>: {{bwKillsList[2]['Melee'][0]| those}} (<b>{{bwKillsList[2]['Melee'][1]}}</b>%)<br>
-                            <b>Projectile</b>: {{bwKillsList[2]['Projectile'][0]| those}} (<b>{{bwKillsList[2]['Projectile'][1]}}</b>%)<br>
-                            <b>Void</b>: {{bwKillsList[2]['Void'][0]| those}} (<b>{{bwKillsList[2]['Void'][1]}}</b>%)<br>
-                            <b>Magic</b>: {{bwKillsList[2]['Magic'][0]| those}} (<b>{{bwKillsList[2]['Magic'][1]}}</b>%)<br>
-                            <b>Entity</b>: {{bwKillsList[2]['Entity'][0]| those}} (<b>{{bwKillsList[2]['Entity'][1]}}</b>%)<br>
-                            <b>Entity Explosion</b>: {{bwKillsList[2]['Entity explosion'][0]| those}} (<b>{{bwKillsList[2]['Entity explosion'][1]}}</b>%)<br>
-                            <b>Fire</b>: {{bwKillsList[2]['Fire'][0]| those}} (<b>{{bwKillsList[2]['Fire'][1]}}</b>%)<br>
-                            <b>Fall Damage</b>: {{bwKillsList[2]['Fall damage'][0]| those}} (<b>{{bwKillsList[2]['Fall damage'][1]}}</b>%)<br>
+                            <b class='dark_blue'>Melee</b>: {{bwKillsList[2]['Melee'][0]| those}} (<b>{{bwKillsList[2]['Melee'][1]}}</b>%)<br>
+                            <b class='gray'>Projectile</b>: {{bwKillsList[2]['Projectile'][0]| those}} (<b>{{bwKillsList[2]['Projectile'][1]}}</b>%)<br>
+                            <b class='dark_aqua'>Void</b>: {{bwKillsList[2]['Void'][0]| those}} (<b>{{bwKillsList[2]['Void'][1]}}</b>%)<br>
+                            <b class='dark_purple'>Magic</b>: {{bwKillsList[2]['Magic'][0]| those}} (<b>{{bwKillsList[2]['Magic'][1]}}</b>%)<br>
+                            <b class='gold'>Entity</b>: {{bwKillsList[2]['Entity'][0]| those}} (<b>{{bwKillsList[2]['Entity'][1]}}</b>%)<br>
+                            <b class='yellow'>Entity Explosion</b>: {{bwKillsList[2]['Entity explosion'][0]| those}} (<b>{{bwKillsList[2]['Entity explosion'][1]}}</b>%)<br>
+                            <b class='red'>Fire</b>: {{bwKillsList[2]['Fire'][0]| those}} (<b>{{bwKillsList[2]['Fire'][1]}}</b>%)<br>
+                            <b class='dark_red'>Fall Damage</b>: {{bwKillsList[2]['Fall damage'][0]| those}} (<b>{{bwKillsList[2]['Fall damage'][1]}}</b>%)<br>
                         </p>
                         {% for name, num in bwKillsList[3].items() %}
                             {% if num != 0 %}
