--- a/static/base.scss
+++ b/static/base.scss
@@ -1,3 +1,169 @@
+/*  ▄▄▄▄▄ ▄▄▄· ▪  ▄▄▌  ▄▄▌ ▐ ▄▌▪   ▐ ▄ ·▄▄▄▄      ▄▄· .▄▄ · .▄▄ · 
+   •██  ▐█ ▀█ ██ ██•  ██· █▌▐███ •█▌▐███▪ ██    ▐█ ▌▪▐█ ▀. ▐█ ▀. 
+   ▐█.▪▄█▀▀█ ▐█·██▪  ██▪▐█▐▐▌▐█·▐█▐▐▌▐█· ▐█▌   ██ ▄▄▄▀▀▀█▄▄▀▀▀█▄
+  ▐█▌·▐█ ▪▐▌▐█▌▐█▌▐▌▐█▌██▐█▌▐█▌██▐█▌██. ██    ▐███▌▐█▄▪▐█▐█▄▪▐█
+ ▀▀▀  ▀  ▀ ▀▀▀.▀▀▀  ▀▀▀▀ ▀▪▀▀▀▀▀ █▪▀▀▀▀▀•  ▀ ·▀▀▀  ▀▀▀▀  ▀▀▀▀  */
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer utilities {
+  @variants responsive {
+    .text-center-resp {
+      text-align: center;
+    }
+    .text-left-resp {
+      text-align: left;
+    }
+    .row-end-18 {
+      grid-row-end: 18;
+    }
+  }
+}
+
+/*                                                                                   mm           
+                                                                                    MM           
+ ,p6"bo   ,pW"Wq.`7MMpMMMb.pMMMb. `7MMpdMAo.  ,pW"Wq.`7MMpMMMb.  .gP"Ya `7MMpMMMb.mmMMmm ,pP"Ybd 
+6M'  OO  6W'   `Wb MM    MM    MM   MM   `Wb 6W'   `Wb MM    MM ,M'   Yb  MM    MM  MM   8I   `" 
+8M       8M     M8 MM    MM    MM   MM    M8 8M     M8 MM    MM 8M""""""  MM    MM  MM   `YMMMa. 
+YM.    , YA.   ,A9 MM    MM    MM   MM   ,AP YA.   ,A9 MM    MM YM.    ,  MM    MM  MM   L.   I8 
+ YMbmd'   `Ybmd9'.JMML  JMML  JMML. MMbmmd'   `Ybmd9'.JMML  JMML.`Mbmmd'.JMML  JMML.`MbmoM9mmmP' 
+                                    MM                                                           
+                                  .JMML.                                                      */
+
+@font-face {
+  font-family: 'Inconsolata';
+  src: 'https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&display=swap';
+}
+
+* {font-family:'Inconsolata'; line-height: 1.15;box-sizing:border-box}
+p {padding-top:0.35rem;padding-bottom:0.35rem}
+a, .link {text-decoration: underline;color:#666;}
+
+footer{text-align:center;bottom:0}
+.namehistable {
+  max-height: 80vh;
+}
+
+::-webkit-scrollbar{width:10px}
+::-webkit-scrollbar-track{background:#999}
+::-webkit-scrollbar-thumb{background:#aaa;border-radius: 5px;}
+::-webkit-scrollbar-thumb:hover{background:#ddd;border-radius: 5px;}
+
+#mobilelogo {
+  display:none;
+}
+
+@media (max-width:1024px) {
+  #mobilelogo {
+    display: inline-flex;
+  }
+  #desktoplogo {
+    display: none;
+  }
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active
+#inputId:-webkit-autofill {
+  background-color: transparent !important;
+}
+
+
+html {scroll-behavior:smooth}
+.main>nav{position:sticky;top:8rem;align-self:start}
+.section-nav li.active>a{color:#333;font-weight:500}
+.section-nav{padding-left:0;border-left:0.2rem solid #ccc;}
+.section-nav a{text-decoration:none;display:block;padding:.125rem 0;color:#ccc;transition:all 50ms ease-in-out}
+.section-nav a:hover,.section-nav a:focus{color:#666}
+.anchor {
+  display:block;
+  height:8.625rem;
+  margin-top:-8.625rem;
+}
+
+.mapscag::before {
+  display: block; 
+  content: " "; 
+  margin-top: -285px; 
+  height: 285px; 
+  visibility: hidden; 
+  pointer-events: none;
+}
+
+.twa-2x {
+  margin: 0 !important
+}
+
+ul,ol{list-style:none;margin:0;padding:0}
+li{margin-left:1rem}
+h1{font-weight:300}
+
+/*                  ,,                          
+                 `7MM                          
+                   MM                          
+ ,p6"bo   ,pW"Wq.  MM  ,pW"Wq.`7Mb,od8 ,pP"Ybd 
+6M'  OO  6W'   `Wb MM 6W'   `Wb MM' "' 8I   `" 
+8M       8M     M8 MM 8M     M8 MM     `YMMMa. 
+YM.    , YA.   ,A9 MM YA.   ,A9 MM     L.   I8 
+ YMbmd'   `Ybmd9'.JMML.`Ybmd9'.JMML.   M9mmmP'  */
+
+.black { color: black }
+.blank {color: #010101}
+.dark_blue { color: #00a }
+.dark_green, .DARK_GREEN { color: #0a0 }
+.dark_aqua, .cyan, .DARK_AQUA { color: #0aa }
+.dark_red { color: #a00 }
+.dark_purple, .purple { color: #a0a }
+.gold, .GOLD { color: #fa0 }
+.gray { color: #aaa }
+.dark_gray, .darkgray { color: #555 }
+.blue { color: #55f }
+.green, .lime { color: #5f5 }
+.aqua { color: #5ff }
+.red { color: #f55 }
+.light_purple, .pink { color: #f5f }
+.yellow, .YELLOW { color: #ff0 }
+.white { color: #fff }
+
+.chocolate {background-image:linear-gradient(to right,tomato,coral,gold,lawngreen,steelblue,blueviolet,orchid);-webkit-background-clip:text;-webkit-text-fill-color:transparent}
+.almost{background-image:linear-gradient(to right,#ddd6f3,#faaca8);-webkit-background-clip:text;-webkit-text-fill-color:transparent}
+.lightgray { color: #ccc }
+.orange { color: #f60 }
+.lawn {color: #708f5b}
+.yellowgreen {color: yellowgreen}
+.master{background-image:linear-gradient(to right,lightcoral, crimson);-webkit-background-clip:text;-webkit-text-fill-color:transparent}
+
+.twitter{color:#1da1f2}
+.instagram{color:#c1558b}
+.twitch{color:#8c45f7}
+.discord{color:#7286d9}
+.hypixelForums{color:#eabc48}
+.youtube{color:#f00}
+
+.mirror{background-image:radial-gradient(#ccc,#666);-webkit-background-clip:text;-webkit-text-fill-color:transparent}
+.light{background-image:linear-gradient(to right,#fff,#ff0,#fa0);-webkit-background-clip:text;-webkit-text-fill-color:transparent}
+.dawn{background-image:linear-gradient(to right,#fa0,#ccc,#228d7b);-webkit-background-clip:text;-webkit-text-fill-color:transparent}
+.dusk{background-image:linear-gradient(to right,#93f,#f69,#fa0,#ff6);-webkit-background-clip:text;-webkit-text-fill-color:transparent}
+.air{background-image:linear-gradient(to right,aqua,#ccc,#666);-webkit-background-clip:text;-webkit-text-fill-color:transparent}
+.wind{background-image:linear-gradient(to right,#ccc,#0f0,#070);-webkit-background-clip:text;-webkit-text-fill-color:transparent}
+.nebula{background-image:linear-gradient(to right,#900,#f30,#f3f);-webkit-background-clip:text;-webkit-text-fill-color:transparent}
+.thunder{background-image:linear-gradient(to right,#ff6,#fff,#666);-webkit-background-clip:text;-webkit-text-fill-color:transparent}
+.earth{background-image:linear-gradient(to right,#0f0,#070,#fa0,#ff6);-webkit-background-clip:text;-webkit-text-fill-color:transparent}
+.water{background-image:linear-gradient(to right,aqua,teal, royalblue);-webkit-background-clip:text;-webkit-text-fill-color:transparent}
+.fire{background-image:linear-gradient(to right,#ff3,#fa0,#800);-webkit-background-clip:text;-webkit-text-fill-color:transparent}                       
+                                           
+/*  ██▄   ██     ▄▄▄▄▀ ██     ▄▄▄▄▀ ██   ███   █     ▄███▄     ▄▄▄▄▄   
+   █  █  █ █ ▀▀▀ █    █ █ ▀▀▀ █    █ █  █  █  █     █▀   ▀   █     ▀▄ 
+  █   █ █▄▄█    █    █▄▄█    █    █▄▄█ █ ▀ ▄ █     ██▄▄   ▄  ▀▀▀▀▄   
+ █  █  █  █   █     █  █   █     █  █ █  ▄▀ ███▄  █▄   ▄▀ ▀▄▄▄▄▀    
+███▀     █  ▀         █  ▀         █ ███       ▀ ▀███▀             
+        █            █            █                                
+       ▀            ▀            ▀                                  */
+
 table.dataTable{width:100%;margin:0 auto;clear:both;border-collapse:separate;border-spacing:0}
 table.dataTable thead th,table.dataTable tfoot th{font-weight:bold}
 table.dataTable thead th,table.dataTable thead td{padding:10px 18px;border-bottom:1px solid #D1D5DB}
