--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,7 @@
 		<link href="https://fonts.googleapis.com/css2?family=Orienta&display=swap" rel="stylesheet">
 		<script src="https://kit.fontawesome.com/a6310495d7.js" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+		
 		<!-- DESKTOP USERS -->
 		<div id='desktoplogo' class="grid grid-cols-4 sticky top-0 bg-gray-100 mb-8 z-40 w-full shadow items-center">
 			<a href='/'><img class='h-16 w-auto ml-4' src='https://raw.githubusercontent.com/gist/literaiiy/62febf3d1f9a035b469e06bdef8456bc/raw/223650b7551fd90e7747e687a2643cdb1cdebf9d/teeramouse.svg' alt="tiramisu Logo"></a>
@@ -33,8 +34,9 @@
 				</button>
 			</form>
 			<div class="flex flex-row-reverse">
-				<button class='my-5 mx-2 p-3 col-start-7 focus:outline-none bg-gray-200 rounded-xl hover:bg-gray-300'>
+				<button class='tooltip my-5 mx-2 p-3 col-start-7 focus:outline-none bg-gray-200 rounded-xl hover:bg-gray-300'>
 					<i class="m-0 twa twa-2x twa-1f1fa-1f1f8"></i>
+					<span class='tooltiptext'>Sorry, English (US) is the only currently available language. More coming soon!</span>
 				</button>
 			</div>
 		</div>
@@ -48,8 +50,9 @@
 				</button>
 			</form>
 			<div class="flex flex-row-reverse">
-				<button class="my-5 ml-1 mr-5 p-2.5 col-start-7 focus:outline-none bg-gray-200 rounded-xl hover:bg-gray-300">
+				<button class="tooltip my-5 ml-1 mr-5 p-2.5 col-start-7 focus:outline-none bg-gray-200 rounded-xl hover:bg-gray-300">
 					<i class="m-0 twa twa-2x twa-1f1fa-1f1f8"></i>
+					<span class='tooltiptext'>Sorry, English (US) is the only currently available language. More coming soon!</span>
 				</button>
 			</div>
 
