--- a/templates/404.html
+++ b/templates/404.html
@@ -1,26 +1,22 @@
 {% extends 'index.html' %}
 
 {% block head %}
-<head>
 	<title>{{error}} - All the tiramisu is gone!</title>
-	<!-- <link href="{{ url_for('static', filename='404.css') }}" rel="stylesheet" type="text/css"> -->
-</head>
 {% endblock %}
 
 {% block content %}
 <body>
-
-	<div class="flex flex-col items-center">
-		<div class="text-3xl">
-			<div class="text-8xl font-bold">{{error}}</div> {{text}}
+	<div class="grid grid-cols-2">
+		<div class="text-3xl flex flex-col self-end self-center">
+			<div class="text-8xl font-bold self-end">{{error}}</div> 
+			<div class="self-end">{{text}}</div>
 		</div>
-		<img class='h-auto' src="https://i.ibb.co/5L5qKfd/pigcake.jpg"/>
+		<img class='h-auto py-5' src="https://i.ibb.co/5L5qKfd/pigcake.jpg"/>
 		<p>
 			{% if text == 'API timeout' %}
 			{{desc}} Check its status <a target='_blank' class='font-semibold' href="https://status.hypixel.net">here</a>.
 			{% endif %}
 		</p>
-	</div>
-
+	</div>\
 </body>
 {% endblock %}
